MODOERDERS-1028-Add specific error code of barcode uniqueness error error during receiving